# LittleLog

./: CMakeLists.txt  README.md
include/: LittleLog.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test.cpp
